changed css selectors to correct css layout bug
updates #20561

--- a/resources/tribe-events-pro-full.css
+++ b/resources/tribe-events-pro-full.css
@@ -441,7 +441,7 @@
    @ Template: map.php
 =============================================*/
 /* tribe geolocation map area */
-.tribe-events-filters-v #tribe-geo-wrapper {
+.tribe-events-filters-v #tribe-geo-results {
 	 width: 72%; 
 	 float: right; 
 	 padding: 24px 0 1px;
